style.css
/* ... */
/* WORK */
.section-work {
  display: flex;
  flex-direction: column;
}

.rs-text {
  position: relative;
  margin-top: -500px;
  margin-left: 960px;
  width: 350px;
}

/* GRANDSON */
.section-grandson {
  display: flex;
  flex-direction: column;
}

.grandson {
  margin-top: 110px;
  margin-left: -50px;
}

.gs-text {
  position: relative;
  margin-top: -710px;
  margin-left: 180px;
}

/* RETIREMENT */
.section-retirement {
  position: relative;
  display: flex;
  flex-direction: column;
  margin-top: 350px;
}

.flex-retirement {
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  /* align-items: center; */
  gap: 50px;
  margin-top: 20px;
}

.retirement-carousel {
  display: grid;
  background-image: url('./assets/Polaroid mockup3@2x.webp');
  background-size: 100% 100%;
  background-repeat: no-repeat;
}

.carousel-items {
  position: relative;
  display: inherit;
  background-color: #282828;
  margin: 48px 60px 0px 61px;
  width: 653px;
  height: 540px;
  transform: rotate(-1deg);
  overflow: hidden;
}

.carousel-item {
  display: none;
}

.carousel-item.carousel-active {
  display: block; /* Show the active item */
  animation: 0.5s linear 0s both fadeIn;
}

@keyframes fadeIn {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

.carousel-item img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.controls {
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  justify-content: space-between;
  align-items: center;
  /* margin: 10px 39px 21px 38px; */
  margin: 10px 61px 28px 63px;
  transform: rotate(-1deg);
}

.carousel-control {
  background-color: transparent;
  border: none;
  color: black;
  cursor: pointer;
  margin: 0 10px;
  width: 120px;
  height: 116px;
  -webkit-tap-highlight-color: transparent;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
}

.timeline
  .flex-retirement
  .retirement-carousel
  .controls
  .carousel-control
  img {
  display: block;
  margin: auto !important;
}

.carousel-control #arrowLeftButton {
  width: 99px;
  height: 36px;
}

.carousel-control .arrowRightButton {
  width: 79px;
  height: 32px;
}

.timeline
  .flex-retirement
  .retirement-carousel
  .controls
  .changeable-img {
  display: block;
  width: 215px;
  height: 65px;
}

.retirement {
  content: url('./assets/lifeline@3x.png');
  width: 300px;
  margin-top: -157px;
  margin-left: 649px;
}

.rrs-text {
  position: relative;
  margin-top: 120px;
  /*  margin-left: 800px; */
  width: 300px;
}

/* GOLDEN WEDDING */
.section-goldenwedding {
  display: flex;
  flex-direction: column;
}

.goldenwedding {
  margin-top: -200px;
  margin-left: 50px;
}

.gws-text {
  position: relative;
  margin-top: 36px;
  margin-left: 300px;
}

/* DEATH */
.section-twentynineteen {
  display: flex;
  flex-direction: column;
}

.twentynineteen {
  margin-top: 350px;
  width: 1286px;
}

.tns-text {
  position: relative;
  margin-top: -560px;
  margin-left: 980px;
  width: 300px;
}

/* FOOTER */
.menu {
  position: relative;
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin-top: 700px;
  /* z-index: 0; */
}

.pages {
  display: flex;
  position: absolute;
  bottom: 15px;
}

.navbook {
  width: 80vw;
  margin-bottom: 0px;
  margin-left: -4vmin;
  z-index: 2;
}

.milestones {
  margin: -3vmin 0 0 5vmin;
}

.stories {
  margin: 1vmin 0 0 -3vmin;
  z-index: 1;
}

.gallery {
  margin: -4vmin 0 0 -6vmin;
}

.my-granny {
  margin: 1vmin 0 0 -3vmin;
  z-index: 1;
}

.remember {
  margin: -4vmin 0 0 -6vmin;
}

.map {
  margin: 1.5vmin 0 0 -4vmin;
  z-index: 1;
}

.nanas-words {
  margin: -3vmin 0 0 -3vmin;
}

.pages img {
  width: 12vw;
  height: auto;
  transition: transform 0.3s ease-in-out;
}

.pages img:hover {
  cursor: pointer;
  width: 12vw;
  transform: translateY(-1rem);
}

/* EXTRAS */
.chamomille {
  position: relative;
  /* width: 244px; */
  height: 462px;
  margin-top: -700px;
  margin-bottom: 250px;
  align-self: end;
  /* margin-right: -250px; */
  right: -507px;
  z-index: 1;
  transform: translateX(20%);
}

.ball-toy {
  position: relative;
  margin-top: -600px;
  margin-bottom: -450px;
  right: 800px;
  width: 884px;
  z-index: 0;
  transform: translateX(-10%);
}

.passport {
  position: absolute;
  width: 750px;
  margin-top: -283px;
  left: 1100px;
  transform: translateX(20%);
}

.lottery-ticket {
  position: relative;
  width: 1038px;
  margin-top: -1800px;
  right: 870px;
  transform: translateX(-10%);
}

.scroll-active-left {
  animation: 1s linear 0s forwards slideLeft;
}

.scroll-active-right {
  animation: 1s linear 0s forwards slideRight;
}

@keyframes slideRight {
  from {
    transform: translateX(20%);
  }
  to {
    transform: translateX(0);
  }
}

@keyframes slideLeft {
  from {
    transform: translateX(-10%);
  }
  to {
    transform: translateX(0);
  }
}

/* Media Queries */
@media only screen and (max-width: 500px) {
  .rrs-text h2 {
    bottom: 173vmin !important;
  }
}
/* ... */

